Remove jcommander and claypot
Fix: https://github.com/io7m-com/calino/issues/27